Docker config fixed.

--- a/TaskHive_ProjectService/appsettings.json
+++ b/TaskHive_ProjectService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AzureSQLConnection": "Connection_String"
+    "DockerSQLConnection": "Server=sql_server,1433; Database=taskhive; USER ID=sa; Password=Local_1234; Encrypt=True; TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
